# reorder

./: .gitignore  ARCHITECTURE.md  BETA_USAGE.md  README.md  REQUIREMENTS.md  beta_basic_2000mb.bat  beta_here.bat  beta_smart_identify.bat  config.json  extract_here.bat  keywords.txt  passwords.txt  pyproject.toml  requirements.txt  run_in_this_folder.bat
bat_script/: MoveFilesUp.bat  add_suffix_7z.bat  add_suffix_input.bat  add_suffix_mp4.bat  delete_empty_folders.bat  extract_archives.bat  fix_7z_mid.bat  fix_7z_parts.bat  jpg_to_7z.bat  remove_extension.bat  rename.bat
docs/: archive_identification_plan.md  todo.md
resources/: keywords.txt  passwords.txt
src/reorder_engine/: __main__.py  beta.py  cleanup_empty.py
src/reorder_engine/domain/: models.py
src/reorder_engine/infrastructure/: command_runner.py  sevenzip_bootstrap.py  tools.py
src/reorder_engine/interfaces/: cleaning.py  decrypting.py  extracting.py  grouping.py  stages.py
src/reorder_engine/pipelines/: cli.py
src/reorder_engine/services/: archive_naming.py  beta_pipeline.py  cleaning.py  config.py  decrypting.py  discovery.py  extracting.py  flattening.py  grouping.py  keywords.py  passwords.py  rename_session.py  restoring.py
tests/: test_apate.py  test_beta_cli_and_extracting.py  test_beta_pipeline.py  test_discovery.py  test_flattening.py  test_grouping.py  test_restoring.py
tools/: APATE.md  README.md  apate.py
tools/7zip/: 7z2501-x64.msi
