[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reorder-engine"
version = "0.1.0"
description = "归序（ReOrder Engine）：批量清洗命名并解压"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
